--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "redux-thunk": "^2.0.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
+    "serviceworker-webpack-plugin": "^0.1.6",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.14",
